syntax = "proto3";
package episodepb;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "shared/pb/episodepb;episodepb";

service EpisodeService {
  rpc CreateEpisode(CreateEpisodeRequest) returns (CreateEpisodeResponse);
  rpc GetEpisodeByID(GetEpisodeByIDRequest) returns (Episode);
  rpc ListEpisodesBySeasonID(ListEpisodesBySeasonIDRequest) returns (EpisodeList);
  rpc UpdateEpisodeByID(UpdateEpisodeByIDRequest) returns (google.protobuf.Empty);
  rpc ReorderEpisodesBySeasonID(ReorderEpisodesBySeasonIDRequest) returns (google.protobuf.Empty);
  rpc DeleteEpisodeByID(DeleteEpisodeByIDRequest) returns (google.protobuf.Empty);
  rpc DeleteAllEpisodesBySeasonID(DeleteAllEpisodesBySeasonIDRequest) returns (google.protobuf.Empty);
}

message CreateEpisodeRequest {
  string season_id = 1;
  string title = 2;
  string description = 3;
  string media_id = 4;
}

message CreateEpisodeResponse {
  string episode_id = 1;
}

message GetEpisodeByIDRequest {
  string episode_id = 1;
}

message Episode {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string title = 4;
  string description = 5;
  string season_id = 6;
  Media media_info = 7;
  int32 order = 8;
}

message ListEpisodesBySeasonIDRequest {
  string season_id = 1;
}

message EpisodeList {
  repeated Episode list = 1;
}

message UpdateEpisodeByIDRequest {
  string episode_id = 1;
  string title = 2;
  string description = 3;
  string media_id = 4;
}

message ReorderEpisodesBySeasonIDRequest {
  string season_id = 1;
  repeated string episode_ids = 2;
}

message DeleteAllEpisodesBySeasonIDRequest {
  string season_id = 1;
}

message DeleteEpisodeByIDRequest {
  string episode_id = 1;
}

enum MediaType {
  UNKNOWN = 0;
  IMAGE = 1;
  VIDEO = 2;
  AUDIO = 3;
}

message Media {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string title = 4;
  string path = 5;
  MediaType type = 6;
  string mime_type = 7;
  int64 size = 8;
}
